Adding a new test suite will now default to the project framework

--- a/notes.org
+++ b/notes.org
@@ -93,11 +93,10 @@
 ** TODO ut-draw-test-suite needs a lot of work, need to hash out summarize features as well as test-suite status
 ** TODO weird glitch in flycheck on ut-define-framework, functionp doesn't appear to be working, 
    could be a temp file issue investigate further.
-** TODO adding a test asks for the framework, which it should just inherit from the conf
-** TODO adding AC_CONFIG_FILES for the test directory doesn't appear to be automatic for some reason
+** DONE adding a test asks for the framework, which it should just inherit from the conf
+** DONE adding AC_CONFIG_FILES for the test directory doesn't appear to be automatic for some reason
 ** DONE new cunit tests don't add AC_CONFIG_FILES to configure.ac (tests/${TEST-SUITE}/Makefile, tests/${TEST-SUITE}/src/Makefile
 ** TODO Makefile.am for new test uses absolute path with ~/ unexpanded, need to change to relative back path
    Current solution is a bit hackish.
 ** DONE Makefile.am in ${test-suite}/src/ using camel case instead of snake case for cunit
-** TODO Wrong path for cunit-sexp-outputer include and lib
-   
+** DONE Wrong path for cunit-sexp-outputer include and lib
