Fixed a variety of issues in ut-cunit-framework including but probably not limited to:     - fixed to the default Makefile.am code to build the source testing file     - Assigning proper hash values for results from running a test     - fixed path of run-command value
Fixed a variety of issues in ut.el including but probably not limited
to:

    - Added predicates to test whether a value returned by a test run is
      in the proper format (may deprecate over explicit setting of
      values in framework calls)
    - Added accessors functions to get various line number and other
      drawing information related to test suites
    - Added new functions to work with the [tab]/toggle command in the
      ut buffer. Now checks line number against the position of a test
      suite in the ut-buffer instead of working off of regexps. Toggling
      summarize and not summarize largely works now for both run and
      build information.

--- a/notes.org
+++ b/notes.org
@@ -81,6 +81,20 @@
     :PROPERTIES:
     :description: Definition of how tests are performed in a given type of testing harness
     :END:
+*** test-suite-results
+**** Structure
+     - Hash Table with the following symbolic keys
+       - :start-time ~ string
+       - :end-time ~ string
+       - :name ~ string
+       - :test ~ list of test-results
+*** test-results
+**** Structure
+     - Hash table with the following symbolic key
+       - :name ~ string
+       - :status ~ symbol of the following values: '(succeeded failed error not-run unknown)
+       - :output ~ string
+       - :assertions ~ optional list of assertion-results
 * Random
 ** TODO %project-dir% is not being expanded because it isn't part of the test-suite hashtable
 ** TODO ut-framework-new-test-suite-hook should probably take the ut-conf as well as the test-suite
